--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "es6-promise": "^4.2.8",
     "milligram": "^1.3.0",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
