--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "es6-promise": "^4.2.8",
     "milligram": "^1.3.0",
     "vue": "^2.6.10",
+    "vue-full-loading": "^1.2.1",
     "vue-js-modal": "^1.3.31",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
